Update banner to ensure text is always legible

--- a/src/patterns/common/page/page.scss
+++ b/src/patterns/common/page/page.scss
@@ -30,7 +30,6 @@
   .c-page__header-inset {
     flex: 1;
     max-width: max-content;
-    box-shadow: 0 0 12px 6px rgba($__color-neutral-darkest, 0.25);
     padding: 1vw 2vw;
     background-color: rgba($__color-neutral-darkest, 0.85);
     backdrop-filter: blur(2px);
